--- a/app/views/main.html
+++ b/app/views/main.html
@@ -88,7 +88,7 @@
                 <input type="number" class="form-control" placeholder="Input line width">
               </td>
               <td class="vert-align">
-                <button class="btn btn-xs btn-danger">
+                <button class="btn btn-xs btn-danger" ng-click="removeSeries($index)">
                   <i class="fa fa-times"></i>
                 </button>
               </td>
